--- a/src/components/mmo_0/frontend_html/detail-v2.html
+++ b/src/components/mmo_0/frontend_html/detail-v2.html
@@ -27,7 +27,8 @@
     <meta name="msapplication-TileImage"
         content="https://anbinhnew.com/wp-content/uploads/2022/06/logo-an-binh-noi-that-zshare.jpg">
 
-    <script defer="defer" src="https://anbinhnew.com/wp-content/plugins/qc_landingpage/frontend/src/lazyload.js"></script>
+    <script defer="defer"
+        src="https://anbinhnew.com/wp-content/plugins/qc_landingpage/frontend/src/lazyload.js"></script>
     <link href="./style-comom.css" rel="stylesheet">
     <link href="./style-detail.css" rel="stylesheet">
     <link href="./icon/style.css" rel="stylesheet">
@@ -67,8 +68,9 @@
                 </div>
                 <div class="icon-cart">
                     <a href="#" style="text-decoration: none;">
-                        <div class="wrap-icon-cart"  onclick="show_cart()">
-                            <span class="icon-cartx" style=" font-size: 30px; position: relative;"><b class="notify" id="cart-1">0</b></span>
+                        <div class="wrap-icon-cart" onclick="show_cart()">
+                            <span class="icon-cartx" style=" font-size: 30px; position: relative;"><b class="notify"
+                                    id="cart-1">0</b></span>
                             <span class="gh">Giỏ hàng</span>
                         </div>
                     </a>
@@ -1033,25 +1035,53 @@
                                 <div class="item"><img itemprop="image"
                                         src="https://anbinhnew.com/wp-content/uploads/2021/01/Giuong-sat-don-Hoang-Gia-mau-HG02.jpg"
                                         alt="Giường sắt đơn Hoàng Gia - HG02" title="Giường sắt đơn Hoàng Gia - HG02"
-                                        class="d-block w-100" /><div class="w-btn-mua"><button class="btn-mua" onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/Giuong-sat-don-Hoang-Gia-mau-HG02.jpg')"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
+                                        class="d-block w-100" />
+                                    <div class="w-btn-mua"><button class="btn-mua"
+                                            onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/Giuong-sat-don-Hoang-Gia-mau-HG02.jpg')"><span
+                                                class="icon-cartx"></span>Mua ngay!</button></div>
+                                </div>
                                 <div class="item"><img class="owl-lazyx"
                                         src="https://anbinhnew.com/wp-content/uploads/2021/01/Giuong-sat-don-Hoang-Gia-mau-HG02-h2.jpg"
-                                        alt="Giường sắt đơn Hoàng Gia - HG02 1" /><div class="w-btn-mua"><button class="btn-mua"  onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/Giuong-sat-don-Hoang-Gia-mau-HG02-h2.jpg')"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
+                                        alt="Giường sắt đơn Hoàng Gia - HG02 1" />
+                                    <div class="w-btn-mua"><button class="btn-mua"
+                                            onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/Giuong-sat-don-Hoang-Gia-mau-HG02-h2.jpg')"><span
+                                                class="icon-cartx"></span>Mua ngay!</button></div>
+                                </div>
                                 <div class="item"><img class="owl-lazyx"
                                         src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-ngu-hoang-gia.jpg"
-                                        alt="Giường sắt đơn Hoàng Gia - HG02 2" /><div class="w-btn-mua"><button class="btn-mua" onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-ngu-hoang-gia.jpg')"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
+                                        alt="Giường sắt đơn Hoàng Gia - HG02 2" />
+                                    <div class="w-btn-mua"><button class="btn-mua"
+                                            onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-ngu-hoang-gia.jpg')"><span
+                                                class="icon-cartx"></span>Mua ngay!</button></div>
+                                </div>
                                 <div class="item"><img class="owl-lazyx"
                                         src="https://anbinhnew.com/wp-content/uploads/2022/06/giuong-sat-my-thuat-hg01.jpg"
-                                        alt="Giường sắt đơn Hoàng Gia - HG02 3" /><div class="w-btn-mua"><button class="btn-mua"  onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2022/06/giuong-sat-my-thuat-hg01.jpg')"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
+                                        alt="Giường sắt đơn Hoàng Gia - HG02 3" />
+                                    <div class="w-btn-mua"><button class="btn-mua"
+                                            onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2022/06/giuong-sat-my-thuat-hg01.jpg')"><span
+                                                class="icon-cartx"></span>Mua ngay!</button></div>
+                                </div>
                                 <div class="item"><img class="owl-lazyx"
                                         src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-don-Hoang-Gia-mau-nau-dam-HG02-h1.jpg"
-                                        alt="Giường sắt đơn Hoàng Gia - HG02 4" /><div class="w-btn-mua"><button class="btn-mua"  onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-don-Hoang-Gia-mau-nau-dam-HG02-h1.jpg')"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
+                                        alt="Giường sắt đơn Hoàng Gia - HG02 4" />
+                                    <div class="w-btn-mua"><button class="btn-mua"
+                                            onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-don-Hoang-Gia-mau-nau-dam-HG02-h1.jpg')"><span
+                                                class="icon-cartx"></span>Mua ngay!</button></div>
+                                </div>
                                 <div class="item"><img class="owl-lazyx"
                                         src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-don-Hoang-Gia-mau-nau-dam-HG02-h2.jpg"
-                                        alt="Giường sắt đơn Hoàng Gia - HG02 5" /><div class="w-btn-mua"><button class="btn-mua"  onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-don-Hoang-Gia-mau-nau-dam-HG02-h2.jpg')"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
+                                        alt="Giường sắt đơn Hoàng Gia - HG02 5" />
+                                    <div class="w-btn-mua"><button class="btn-mua"
+                                            onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-don-Hoang-Gia-mau-nau-dam-HG02-h2.jpg')"><span
+                                                class="icon-cartx"></span>Mua ngay!</button></div>
+                                </div>
                                 <div class="item"><img class="owl-lazy"
                                         data-src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-mau-hong-cong-chua-dep-nhat-1m6.jpg"
-                                        alt="Giường sắt đơn Hoàng Gia - HG02 6" /><div class="w-btn-mua"><button class="btn-mua"  onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-mau-hong-cong-chua-dep-nhat-1m6.jpg')"><span class="icon-cartx"></span>Mua ngay!</button></div></div>
+                                        alt="Giường sắt đơn Hoàng Gia - HG02 6" />
+                                    <div class="w-btn-mua"><button class="btn-mua"
+                                            onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-mau-hong-cong-chua-dep-nhat-1m6.jpg')"><span
+                                                class="icon-cartx"></span>Mua ngay!</button></div>
+                                </div>
                             </div>
                             <div class="product owl-carousel dot slideProduct-dot">
                                 <div>
@@ -1186,7 +1216,7 @@
                             </table>
                         </div>
                         <div class="table-ct">
-                            <span>Thông số kĩ thuật :</span>
+                            <span id="thong-so-ki-thuat">Thông số kĩ thuật :</span>
                             <table class="st-pd-table">
                                 <tbody>
                                     <tr>
@@ -1397,57 +1427,15 @@
                     <li><a id="lien-he-fb" target="_blank" href="https://m.me/anbinhnewcom" rel="nofollow"
                             onClick="window.value=60000"><span class="icon-mess icon-messenger"></span></a><span
                             class="aml-text-content aml-tooltiptext">Nhắn tin với chúng tôi qua facebook</span></li>
-                    <li onclick="show_cart()"><a id="my-cart" onclick="window.value=60000" ><span class="icon-cartx icon-messenger re"><b class="notify" id="cart-2" >0</b></span></a><span
+                    <li onclick="show_cart()"><a id="my-cart" onclick="window.value=60000"><span
+                                class="icon-cartx icon-messenger re"><b class="notify" id="cart-2">0</b></span></a><span
                             class="aml-text-content aml-tooltiptext">Giỏ hàng</span></li>
                 </ul>
             </div>
-
-            <div id="popup-cart" class="popup-cart">
-                <!-- <div class="pp-content">
-                    <div>
-                        <span class="header-1">Giỏ hàng</span>
-                        <span class="header-2 cs">x</span>
-                    </div>
-                    <div id="datawwrap">
-                        <div class="item-data">
-                            <div class="item-data-1">
-                                <div class="img-small">
-                                    <img width="100%" src="https://anbinhnew.com/wp-content/uploads/2021/01/Ban-hoc-doi-bang-nhua-cho-be-trai-va-gai-1-300x300.jpg">
-                                </div>
-                                <div class="title-z">
-                                    <span>Combo Bộ Bàn Học Đôi Bằng Nhựa Có Kệ Sách Cho Bé Trai, Bé Gái</span>
-                                    -<b class="xx1">ngang 80cm x 2m</b>
-                                    -<b class="xx2">1.150.000đ</b>
-                                </div>
-                            </div>
-                            <div class="sl">
-                                <div>
-                                    <span class="add-1 cs">-
-                                    </span><span class="num">2</span>
-                                    <span  class="add-2 cs">+</span>
-                                    <span class="xoa" >xóa</span>
-                                </div>
-                            </div>
-                            <div class="upsale-sp">
-
-                            </div>
-                        </div>
- 
-                    </div>
-                    <div class="wrap-tt">
-                        <div class="tong-tien">
-                            <p style="text-align: center;"><span style="font-weight: 600;">Tổng tiền : </span><span
-                                    id="price-sum" style=" color: blue; font-weight: 700; ">5.100.000đ</span></p>
-                        </div>
-                        <div class="btn-checkout">
-                            <a href="https://anbinhnew.com/thanh-toan-don-hang/" title="thanh toan" rel="nofollow">
-                                <button class="thanh-toan">Thanh toán</button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="dimer-popup" style=" width: 100%; height: 100%; "></div> -->
+            <div id="scrollTop" class="contactsx" >
+                <div class="rap-contanct">👉<a href="https://cofa.vn/vi/giuong-sat/" class="contacktsx re" target="_blank">Mua giường sắt ở đây<span class="anime">1</span></a></div>
             </div>
+            <div id="popup-cart" class="popup-cart"></div>
             <div id="check-kt" class="check-kt" onclick="hiden_check_kt()"></div>
         </footer>
     </div>
@@ -1455,38 +1443,38 @@
         document.getElementById("contents-dt").style.display = "block";
         document.getElementById("footerz-dt").style.display = "block";
         window.data = {
-            id:0,
-            attribute_name:'Kích thước',
-            table_price:[
+            id: 0,
+            attribute_name: 'Kích thước',
+            table_price: [
                 {
-                    kt:'1mx2m',
-                    price_og:'1350000',
-                    price_sale:'1250000'
+                    kt: '1mx2m',
+                    price_og: '1350000',
+                    price_sale: '1250000'
                 },
                 {
-                    kt:'1m2x2m',
-                    price_og:'1550000',
-                    price_sale:'1350000'
+                    kt: '1m2x2m',
+                    price_og: '1550000',
+                    price_sale: '1350000'
                 },
                 {
-                    kt:'1m4x2m',
-                    price_og:'1650000',
-                    price_sale:'1450000'
+                    kt: '1m4x2m',
+                    price_og: '1650000',
+                    price_sale: '1450000'
                 },
                 {
-                    kt:'1m6x2m',
-                    price_og:'1750000',
-                    price_sale:'1550000'
+                    kt: '1m6x2m',
+                    price_og: '1750000',
+                    price_sale: '1550000'
                 },
                 {
-                    kt:'1m8x2m',
-                    price_og:'1850000',
-                    price_sale:'1650000'
+                    kt: '1m8x2m',
+                    price_og: '1850000',
+                    price_sale: '1650000'
                 },
                 {
-                    kt:'2mx2m',
-                    price_og:'1950000',
-                    price_sale:'1750000'
+                    kt: '2mx2m',
+                    price_og: '1950000',
+                    price_sale: '1750000'
                 },
             ]
         };
