--- a/src/components/mmo_0/frontend_html/style-detail.css
+++ b/src/components/mmo_0/frontend_html/style-detail.css
@@ -521,3 +521,74 @@ p.danh-price {
     top: -1px;
     right: -1px;
 }
+.contactsx {
+    position: fixed;
+    bottom: 48px;
+    width: 100%;
+    z-index: 99;
+    display: none;
+}
+.rap-contanct {
+    position: relative;
+    text-align: center;
+}
+.contacktsx {
+    display: inline-block;
+    padding: 5px 16px;
+    margin-bottom: 7px;
+    background-color: #c4fdc7;
+    border-radius: 13px;
+    border: 1px solid #4CAF50;
+}
+@media (min-width: 992px){
+    .contacktsx {
+        background-color: #c4fdc7;
+        border: 1px solid #4CAF50;
+    }
+    .contactsx{
+        bottom: 0px;
+    }
+}
+.anime {
+    display: block !important;
+    box-sizing: border-box;
+    font-family: 'Trebuchet MS', sans-serif;
+    background: #E91E63;
+    border-radius: 50%;
+    color: #fff;
+    font-weight: bold;
+    font-size: 10px;
+    height: 18px;
+    line-height: 1.55em;
+    top: -6px;
+    right: -8px;
+    border: 2px solid #fff;
+    position: absolute;
+    text-align: center;
+    width: 18px;
+    box-shadow: 1px 1px 5px rgba(0,0,0, .2);
+    animation: pulse 1.5s infinite;
+  }
+  .anime:after {
+    content: '';
+    position: absolute;
+    top:-2px;
+    left:-2px;
+    border:2px solid rgba(0,155,243,.5);
+    opacity:0;
+    border-radius: 50%;
+    width:100%;
+    height:100%;
+    animation: sonar 1.5s 1;
+  }
+  @keyframes sonar { 
+    0% {transform: scale(.9); opacity:1;}
+    100% {transform: scale(2);opacity: 0;}
+  }
+  @keyframes pulse {
+    0% {transform: scale(1);}
+    20% {transform: scale(1.4); } 
+    50% {transform: scale(.9);} 
+    80% {transform: scale(1.2);} 
+    100% {transform: scale(1);}
+  }
