--- a/src/components/mmo_0/post/post.css
+++ b/src/components/mmo_0/post/post.css
@@ -140,15 +140,13 @@
 .text-dt h3{
    font-size: 14px;
 }
-.text-dt p::before { /* add the new bullet point */
-   display: inline-block;
-   content: '';
-   -webkit-border-radius: 0.375rem;
-   border-radius: 0.375rem;
-   height: 0.75rem;
-   width: 0.75rem;
-   margin-right: 0.5rem;
-   background-color: #bdbdbd;
+.text-dt figure{
+   text-align: center;
+}
+.text-dt img{
+   display: block;
+   width: 400px;
+   margin: auto;
 }
 blockquote:not(.link-dt) {
    background: #d9f1c2;
@@ -259,7 +257,7 @@ blockquote>p {
    font-size: 15px;
    cursor: pointer;
    color: #a7a5a5;
-   top: 0px;
+   bottom: 0px;
 }
 .icon-img-muitxx:hover,.icon-x-imgxx:hover{
    color: #e30505;
@@ -347,7 +345,7 @@ blockquote>p {
    cursor: pointer;
 }
 .abs{
-   position: absolute;
+   position: absolute !important;
 }
 .up1{
    position: absolute;
@@ -391,4 +389,8 @@ blockquote>p {
 .active1 {
    border: 1px solid red !IMPORTANT;
    background-color: antiquewhite !important;
+}
+.input_table_price input:not(.ktzx){
+   border: none;
+   color: #9ba38c;
 }
