--- a/src/components/mmo_0/frontend_html/category.html
+++ b/src/components/mmo_0/frontend_html/category.html
@@ -1454,7 +1454,7 @@
                     <div class="wrap-list">
                         <div class="lis-category">
                             <div class="header-cate re">
-                                <img src="media/ff-1.svg" width="32px" class="icon-tt-1">
+                                <span class="icon-ff-1 icon-tt-1" style=" top: 6px; "></span>
                                 <h3 class="title-h3-1">Bài viết liên quan</h3>
                             </div>
                             <div class="wza-home">
