--- a/src/components/mmo_0/frontend_html/detail-v2.html
+++ b/src/components/mmo_0/frontend_html/detail-v2.html
@@ -1032,7 +1032,7 @@
                     <div class="col-sm-12 dev-4 col-md-4" id="get-width">
                         <div id="set-height">
                             <div class="product owl-carousel slideProduct">
-                                <div class="item"><img itemprop="image"
+                                <div class="item get-img"><img itemprop="image"
                                         src="https://anbinhnew.com/wp-content/uploads/2021/01/Giuong-sat-don-Hoang-Gia-mau-HG02.jpg"
                                         alt="Giường sắt đơn Hoàng Gia - HG02" title="Giường sắt đơn Hoàng Gia - HG02"
                                         class="d-block w-100" />
@@ -1040,42 +1040,42 @@
                                             onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/Giuong-sat-don-Hoang-Gia-mau-HG02.jpg')"><span
                                                 class="icon-cartx"></span>Mua ngay!</button></div>
                                 </div>
-                                <div class="item"><img class="owl-lazyx"
+                                <div class="item get-img"><img class="owl-lazyx"
                                         src="https://anbinhnew.com/wp-content/uploads/2021/01/Giuong-sat-don-Hoang-Gia-mau-HG02-h2.jpg"
                                         alt="Giường sắt đơn Hoàng Gia - HG02 1" />
                                     <div class="w-btn-mua"><button class="btn-mua"
                                             onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/Giuong-sat-don-Hoang-Gia-mau-HG02-h2.jpg')"><span
                                                 class="icon-cartx"></span>Mua ngay!</button></div>
                                 </div>
-                                <div class="item"><img class="owl-lazyx"
+                                <div class="item get-img"><img class="owl-lazyx"
                                         src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-ngu-hoang-gia.jpg"
                                         alt="Giường sắt đơn Hoàng Gia - HG02 2" />
                                     <div class="w-btn-mua"><button class="btn-mua"
                                             onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-ngu-hoang-gia.jpg')"><span
                                                 class="icon-cartx"></span>Mua ngay!</button></div>
                                 </div>
-                                <div class="item"><img class="owl-lazyx"
+                                <div class="item get-img"><img class="owl-lazyx"
                                         src="https://anbinhnew.com/wp-content/uploads/2022/06/giuong-sat-my-thuat-hg01.jpg"
                                         alt="Giường sắt đơn Hoàng Gia - HG02 3" />
                                     <div class="w-btn-mua"><button class="btn-mua"
                                             onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2022/06/giuong-sat-my-thuat-hg01.jpg')"><span
                                                 class="icon-cartx"></span>Mua ngay!</button></div>
                                 </div>
-                                <div class="item"><img class="owl-lazyx"
+                                <div class="item get-img"><img class="owl-lazyx"
                                         src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-don-Hoang-Gia-mau-nau-dam-HG02-h1.jpg"
                                         alt="Giường sắt đơn Hoàng Gia - HG02 4" />
                                     <div class="w-btn-mua"><button class="btn-mua"
                                             onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-don-Hoang-Gia-mau-nau-dam-HG02-h1.jpg')"><span
                                                 class="icon-cartx"></span>Mua ngay!</button></div>
                                 </div>
-                                <div class="item"><img class="owl-lazyx"
+                                <div class="item get-img"><img class="owl-lazyx"
                                         src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-don-Hoang-Gia-mau-nau-dam-HG02-h2.jpg"
                                         alt="Giường sắt đơn Hoàng Gia - HG02 5" />
                                     <div class="w-btn-mua"><button class="btn-mua"
                                             onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-don-Hoang-Gia-mau-nau-dam-HG02-h2.jpg')"><span
                                                 class="icon-cartx"></span>Mua ngay!</button></div>
                                 </div>
-                                <div class="item"><img class="owl-lazy"
+                                <div class="item get-img"><img class="owl-lazy"
                                         data-src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-mau-hong-cong-chua-dep-nhat-1m6.jpg"
                                         alt="Giường sắt đơn Hoàng Gia - HG02 6" />
                                     <div class="w-btn-mua"><button class="btn-mua"
@@ -1139,33 +1139,18 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <div class="item"><a class="clear-e"
+                                    <div class="item">
+                                        <a class="clear-e"
                                             href="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-mau-hong-cong-chua-dep-nhat-1m6.jpg"
-                                            alt="Giường sắt đơn Hoàng Gia - HG02 6"><img class="owl-lazy"
-                                                data-src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-mau-hong-cong-chua-dep-nhat-1m6-150x150.jpg"
-                                                alt="Giường sắt đơn Hoàng Gia - HG02 6" class="d-block w-100" /></a>
+                                            alt="Giường sắt đơn Hoàng Gia - HG02 6"><img class="owl-lazy" data-src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-mau-hong-cong-chua-dep-nhat-1m6-150x150.jpg" alt="Giường sắt đơn Hoàng Gia - HG02 6" class="d-block w-100" /></a>
                                     </div>
-                                </div>
+                                 </div>
                             </div>
                         </div>
                         <script type="text/javascript">
                             let w = document.getElementById("get-width").offsetWidth;
                             document.getElementById("set-height").style.minHeight = w / 0.83 + "px";
                         </script>
-                        <!-- <div class="button-dt row">
-                            <div>
-                                <button class="btn-dt">
-                                    <strong>Thêm vào giỏ hàng</strong>
-                                    <small>và tiếp tục mua sắm</small>
-                                </button>
-                            </div>
-                            <div>
-                                <button class="btn-dt color-mn">
-                                    <strong>Mua ngay</strong>
-                                    <small>Gia Hàng Tận Nơi Trên Toàn Quốc</small>
-                                </button>
-                            </div>
-                        </div> -->
                     </div>
                     <div class="col-sm-12 dev-8 col-md-8">
                         <span class="title-dt" id="get-tt">
@@ -1259,8 +1244,6 @@
                             </table>
                         </div>
                     </div>
-
-
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-md-4 card-dr">
@@ -1336,6 +1319,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="show-img" class="row imgs-slide"></div>
             </section>
         </main>
         <footer id="footerz-dt">
@@ -1432,8 +1416,9 @@
                             class="aml-text-content aml-tooltiptext">Giỏ hàng</span></li>
                 </ul>
             </div>
-            <div id="scrollTop" class="contactsx" >
-                <div class="rap-contanct">👉<a href="https://cofa.vn/vi/giuong-sat/" class="contacktsx re" target="_blank">Mua giường sắt ở đây<span class="anime">1</span></a></div>
+            <div id="scrollTop" class="contactsx">
+                <div class="rap-contanct">👉<a href="https://cofa.vn/vi/giuong-sat/" class="contacktsx re"
+                        target="_blank">Mua giường sắt ở đây<span class="anime">1</span></a></div>
             </div>
             <div id="popup-cart" class="popup-cart"></div>
             <div id="check-kt" class="check-kt" onclick="hiden_check_kt()"></div>
