--- a/src/components/mmo_0/frontend_html/style-detail.css
+++ b/src/components/mmo_0/frontend_html/style-detail.css
@@ -592,3 +592,11 @@ p.danh-price {
     80% {transform: scale(1.2);} 
     100% {transform: scale(1);}
   }
+  .img-cs img{
+    width: 100%;
+    margin-bottom: 13px;
+  }
+  .card-imgs {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  }
