--- a/src/components/mmo_0/frontend_html/detail-v2.html
+++ b/src/components/mmo_0/frontend_html/detail-v2.html
@@ -1077,6 +1077,7 @@
                                 </div>
                                 <div class="item get-img"><img class="owl-lazy"
                                         data-src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-mau-hong-cong-chua-dep-nhat-1m6.jpg"
+                                        src="https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-mau-hong-cong-chua-dep-nhat-1m6.jpg"
                                         alt="Giường sắt đơn Hoàng Gia - HG02 6" />
                                     <div class="w-btn-mua"><button class="btn-mua"
                                             onclick="set_kt('https://anbinhnew.com/wp-content/uploads/2021/01/giuong-sat-mau-hong-cong-chua-dep-nhat-1m6.jpg')"><span
