--- a/src/components/mmo_0/frontend_html/style-detail.css
+++ b/src/components/mmo_0/frontend_html/style-detail.css
@@ -442,7 +442,7 @@ p.danh-price {
     user-select: none;
 }
 .btn-mua:hover{
-    background-color: #007ddf;
+    background-color: #007ddf !important;
 }
 .btn-mua>span{
     margin-right: 5px;
@@ -600,3 +600,6 @@ p.danh-price {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   }
+  .danhdev-product.re button {
+    background-color: #3c5e9b;
+}
