--- a/src/components/mmo_0/frontend_html/detail-v2.html
+++ b/src/components/mmo_0/frontend_html/detail-v2.html
@@ -136,7 +136,7 @@
             <div>
                 <section class="contents container re" id="contents-dt">
                     <h1 class="title">Giường sắt, 74 mẫu Giường Sắt Đẹp nhất, Giảm giá tới 40%</h1>
-                    <div class="long-des" style="max-height: 200px;">
+                    <div id="long-des" class="long-des" style="height: 200px;">
                         <blockquote class="link-dt">
                             <p>Bạn đang cần mua <strong>Giường ngủ</strong>, <strong>Giường sắt </strong>để sử dụng, mà
                                 không biết mua ở đâu? Có những loại giường ngủ nào để lựa chọn? Giá của giường sắt là
@@ -918,7 +918,7 @@
                     </div>
                     <div class="see-more"
                         style="background-image: linear-gradient(rgba(255, 255, 255, 0), rgb(255, 255, 255));">
-                        <button>Xem thêm</button>
+                        <button id="btn-more" onclick="set_more()">Xem thêm</button>
                     </div>
                 </section>
                 <section class="wrapz-bl container ">
